se implemento bootstrap

--- a/Combos_para_compartir.html
+++ b/Combos_para_compartir.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
     <title>Combos para compartir</title>
 </head>
 <body>
@@ -22,7 +24,7 @@
 
     <div class="logo">
         <div>
-            <img src="leli.jpg" alt="logo" width="50%" height="50%">
+            <img src="img/leli.jpg" alt="logo" width="50%" height="50%">
         </div>
         <div> 
             <h1 class="titulo">Leli Mishka Pastelería</h1>
@@ -32,15 +34,15 @@
         <div>
             <article class="box">
                 <h5>Box de la Felicidad para 4 personas</h5>
-                <img class="bottom" src="box4.png" alt="" width="300" height="315">
-                <img class="bottom" src="box3.png" alt="" width="300" height="315">
+                <img class="bottom" src="img/box4.png" alt="" width="300" height="315">
+                <img class="bottom" src="img/box3.png" alt="" width="300" height="315">
             </article>
         </div>
         <div>
             <article class="box">
                 <h5>Box de la Felicidad para 2 personas</h5>
-                <img class="bottom" src="box1.png" alt="" width="300" height="315">
-                <img class="bottom" src="box2.png" alt="" width="300" height="315">
+                <img class="bottom" src="img/box1.png" alt="" width="300" height="315">
+                <img class="bottom" src="img/box2.png" alt="" width="300" height="315">
             </article>
         </div>
     </div>    
