--- a/Productos.html
+++ b/Productos.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
     <title>Productos</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
 
     <div class="logo">
         <div>
-            <img src="leli.jpg" alt="logo" width="50%" height="50%">
+            <img src="img/leli.jpg" alt="logo" width="50%" height="50%">
         </div>
         <div> 
             <h1 class="titulo">Leli Mishka Pastelería</h1>
@@ -38,19 +39,19 @@
                 <h1 class="encabezado">Te Ofrecemos:</h1>
                 <div class="grid">
                     <article class="combos-productos">
-                        <img src="box1.png" alt="foto" width="75%" height="75%" >
+                        <img src="img/box1.png" alt="foto" width="75%" height="75%" >
                         <a class="paracompartir" href="Combos_para_compartir.html">Combos para Compartir</a>
                     </article>
                         <article class="combos-productos">
-                            <img src="box2.png" alt="foto" width="75%" height="75%" >
+                            <img src="img/box2.png" alt="foto" width="75%" height="75%" >
                         <a class="paracompartir" href="Combos_individuales.html"> Combos Individuales</a>
                     </article> 
                     <article class="combos-productos">
-                        <img src="box3.png" alt="foto" width="75%" height="75%" >
+                        <img src="img/box3.png" alt="foto" width="75%" height="75%" >
                         <a class="paracompartir" href="Combos_Tematicos.html"> Combos Temáticos</a>
                     </article>
                     <article class="combos-productos">
-                        <img src="torta2.png" alt="foto" width="75%" height="75%" >
+                        <img src="img/torta2.png" alt="foto" width="75%" height="75%" >
                         <a class="paracompartir" href="Especial_tortas.html"> Especial Tortas</a>
                     </article> 
                 </div>   
