--- a/Combos_Tematicos.html
+++ b/Combos_Tematicos.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="combos_tematicos.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
     <title>Combos Temáticos</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
 
     <div class="logo">
         <div>
-            <img src="leli.jpg" alt="logo" width="50%" height="50%">
+            <img src="img/leli.jpg" alt="logo" width="50%" height="50%">
         </div>
         <div> 
             <h1 class="titulo">Leli Mishka Pastelería</h1>
@@ -36,8 +36,8 @@
         <div>
             <article class="BoxCumpleañito">
                 <h5>Box Cumpleañito</h5>
-                <img class="box" src="box2.png" alt="" width="300" height="315">
-                <img class="box" src="box4.png" alt="" width="300" height="315">
+                <img class="box" src="img/box2.png" alt="" width="300" height="315">
+                <img class="box" src="img/box4.png" alt="" width="300" height="315">
             </article>
         </div>
     </div>
