--- a/Combos_individuales.html
+++ b/Combos_individuales.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="combos_individuales.css">
+    <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
     <title>Combos Individuales</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     </header>
     <div class="logo">
         <div>
-            <img src="leli.jpg" alt="logo" width="50%" height="50%">
+            <img src="img/leli.jpg" alt="logo" width="50%" height="50%">
         </div>
         <div> 
             <h1 class="titulo">Leli Mishka Pastelería</h1>
@@ -32,8 +33,8 @@
         <div>
             <article class="paracompartir">
                 <h5>Box de la Felicidad para 1 persona</h5>
-                <img class="box" src="minitorta.png" alt="" width="300" height="315">
-                <img class="box" src="box1.png" alt="" width="300" height="315">
+                <img class="box" src="img/minitorta.png" alt="" width="300" height="315">
+                <img class="box" src="img/box1.png" alt="" width="300" height="315">
             </article>
         </div>
     </div>
