--- a/Especial_tortas.html
+++ b/Especial_tortas.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="especial_tortas.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css-bootstrap/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
     <title>Especial Tortas</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
 
     <div class="logo">
         <div>
-            <img src="leli.jpg" alt="logo" width="50%" height="50%">
+            <img src="img/leli.jpg" alt="logo" width="50%" height="50%">
         </div>
         <div> 
             <h1 class="titulo">Leli Mishka Pastelería</h1>
@@ -36,9 +36,9 @@
         <div>
             <article class="fc">
                 <h5>Especial Tortas</h5>
-                <img class="torta" src="torta1.png" alt="" width="300" height="315">
-                <img class="torta" src="torta2.png" alt="" width="300" height="315">
-                <img class="torta" src="torta3.png" alt="" width="300" height="315">
+                <img class="torta" src="img/torta1.png" alt="" width="300" height="315">
+                <img class="torta" src="img/torta2.png" alt="" width="300" height="315">
+                <img class="torta" src="img/torta3.png" alt="" width="300" height="315">
             </article>
         </div>
 
